<resources>
    <string name="app_name">TranslateToAny</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="select_your_language">Select your language</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_text">Enter text</string>
    <string name="translate">Translate</string>
    <string name="add_language">Add Language</string>
    <string name="paste">Paste</string>
</resources>